Major updates
Metodi principali:
- Implementato il metodo creaTeam() in Utente;
- Implementati i metodi entrataTeam() e abbandonaTeam() in Utente;
- Implementata una versione preliminare della classifica finale, nonché un controllo per ogni chiamata al metodo assegnaVoto(), che controlla se tutti i giudici hanno assegnato un voto a tutti i team.

Aggiunti e migliorati vari metodi volti ad aumentare i controlli e gestire i casi eccezionali.

Tutti i metodi sono stati testati con successo nel main.